[package]
name = "exec"
version = "0.0.1"
edition = "2021"
description = "Plugin to execute programs from path for anyrun"
license = "GPL-3.0"
homepage = "https://github.com/bwachter/anyrun-exec"
repository = "https://github.com/bwachter/anyrun-exec"
readme = "README.org"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
abi_stable = "0.11.1"
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
glob = "0.3.1"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
